- Fix images not showing with null values - Add styling to placeholder image (border)

--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -79,19 +79,24 @@
     width: 100%;
     height: 100%;
 
-    border-radius: 3px 3px 0 0;
+    border-radius: 3px;
     cursor: pointer;
 
     object-fit: cover;
 
     transition: box-shadow 150ms; 
+
+    &.image-border {
+        border: 1px solid $lightgray;
+    }
 }
 
 .article__overflow {
     overflow: hidden;
+    min-height: 95px;
     max-height: 95px;
     padding: 0 1rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 12px;
 }
 
 .article__description {
